--- a/Mission6_Barlocker/Views/Home/MovieForm.cshtml
+++ b/Mission6_Barlocker/Views/Home/MovieForm.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Movie Form";
 }
-@model MovieInput
+@model Movie
 
 <div class="container mt-5">
     <div class="card mx-auto" style="max-width: 400px;">
@@ -16,14 +16,9 @@
 
                 <div class="form-group, form-control">
 
-                    <label asp-for="Category">Category *</label>
+                    <label asp-for="CategoryId">Category *</label>
                     <br />
-                    <input asp-for="Category"/>
-                    <br />
-                    <br />
-                    <label asp-for="SubCategory">Sub Category *</label>
-                    <br />
-                    <input asp-for="SubCategory"/>
+                    <input asp-for="CategoryId"/>
                     <br />
                     <br />
                     <label asp-for="Title">Title *</label>
