Second to last commit and push

--- a/Mission6_Barlocker/Views/Shared/_Layout.cshtml
+++ b/Mission6_Barlocker/Views/Shared/_Layout.cshtml
@@ -24,7 +24,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Collection">Input Form</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieForm">Input Form</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieCollection">Movies</a>
                         </li>
                     </ul>
                 </div>
@@ -39,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Mission6_Barlocker
+            &copy; 2024 - Mission7_Barlocker
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
