--- a/Mission6_Barlocker/Views/Home/MovieForm.cshtml
+++ b/Mission6_Barlocker/Views/Home/MovieForm.cshtml
@@ -16,9 +16,17 @@
 
                 <div class="form-group, form-control">
 
-                    <label asp-for="CategoryId">Category *</label>
+                    <input type="hidden" asp-for="MovieId"/>
+
+                    <label>Category</label>
                     <br />
-                    <input asp-for="CategoryId"/>
+                    <select asp-for="CategoryId">
+                        <option value="">Select Category</option>
+                        @foreach (var c in ViewBag.Categories)
+                        {
+                            <option value="@c.CategoryId">@c.CategoryName</option>
+                        }
+                    </select>
                     <br />
                     <br />
                     <label asp-for="Title">Title *</label>
@@ -31,15 +39,15 @@
                     <input asp-for="Year"/>
                     <br />
                     <br />
-                    <label asp-for="Director">Director *</label>
+                    <label asp-for="Director">Director</label>
                     <br />
                     <input asp-for="Director"/>
                     <br />
                     <br />
-                    <label asp-for="Rating">Rating *</label>
+                    <label asp-for="Rating">Rating</label>
                     <br />
                     <select asp-for="Rating">
-                        <option value="" selected disabled></option>
+                        <option value="">Select Rating</option>
                         <option value="G">G</option>
                         <option value="PG">PG</option>
                         <option value="PG-13">PG-13</option>
@@ -47,7 +55,7 @@
                     </select>
                     <br />
                     <br />
-                    <label asp-for="Edited">Edited</label>
+                    <label asp-for="Edited">Edited *</label>
                     <br />
                     <select asp-for="Edited">
                         <option value="" selected disabled></option>
@@ -61,12 +69,24 @@
                     <input asp-for="LentTo"/>
                     <br />
                     <br />
+                    <label asp-for="CopiedToPlex">Copied To Plex *</label>
+                    <br />
+                    <select asp-for="CopiedToPlex">
+                        <option value="" selected disabled></option>
+                        <option value="true">Yes</option>
+                        <option value="false">No</option>
+                    </select>
+                    <br />
+                    <br />
                     <label asp-for="Notes">Notes</label>
                     <br />
-                    <textarea asp-for="Notes" maxlength="25"></textarea>
+                    <textarea asp-for="Notes" StringLength="25"></textarea>
                 </div>
                 <br />
-                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+
+                <div asp-validation-summary="All"></div>
+
             </form>
         </div>
     </div>
